CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(googletest)

SET(CMAKE_CXX_STANDARD 11)

ADD_EXECUTABLE(test
   SelectionSort.cpp
   VectorContainer.cpp
   listContainer.cpp
   bubbleSort.cpp
   unit_test.cpp 
)

ADD_EXECUTABLE (lab
main.cpp
)

TARGET_LINK_LIBRARIES(test gtest)
TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)

